  The ball size for this mode can also be defined in the debugger menu.

- new video preferences
  - add support to overwrite the ball image/decal texture globally
  - optional post-processing of the internal DMD (via scaleFX algorithm)
  - add SBS (Side by Side) and Interlaced 3D Stereo mode outputs

- combine all common user-tweakable table settings in one simple UI panel in the table options

- new core scripts by mfuegemann

- hotkeys.txt added, containing all editor shortcuts

- DirectX 8 port for input handling (currently disabled)
- texture size limit/downscale now respects aspect ratio (currently disabled)

VP 10.0.0 Changelog
------------------------

- the next generation of Visual Pinball finally arrives!
  due to this, VP10 breaks a lot of backwards compatibility for ramps, lights, physics, colors/images/materials, and more, so
  most existing VP9 and VP8 tables will not work correctly or will even output script errors when run, -but they will load-, so you can reuse all existing work!

  -> TL.DR up-front conversion hints:
     - pull lightsource->ambient down to 0,0,0 (or at least a small value to avoid loss in fidelity of the colors)
     - crank up lightsource->emission to 255,255,255 and tweak the color from there (to get a good contrast on the shading)
     - tweak the lightsource->height and the two emission-scales (and try to keep the light range really really really large before tweaking the rest of the light parameters!)
     - if doing nightmods, try to avoid manually toning down all images and materials, but rather just use the light emission settings
       including the new night->day slider (this will allow the user to tweak the brightness of the table on his/her own afterwards)
     - revisit all physics settings, even if you used VP9Physmod(5) before (only the re-enabled friction and scatter in the physmod5 case though)
     - take a look into the new material editor and assign a material to each object on the table