@@ -289,6 +289,9 @@ STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Video Options"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
+    LISTBOX         IDC_SIZELIST,14,17,129,127,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Force exclusive Fullscreen Mode",IDC_FULLSCREEN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,148,127,10
+    CONTROL         "Force 10Bit-Monitor support",IDC_10BIT_VIDEO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,159,127,10
     CONTROL         "Use always FS backdrop settings",IDC_BG_SET,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,180,131,10
     LTEXT           "FXAA (post-processed Anti-Aliasing)",IDC_STATIC,14,205,140,9
     COMBOBOX        IDC_FXAACB,14,216,111,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
@@ -308,6 +311,14 @@ BEGIN
     CONTROL         "Reflect Ball on Playfield",IDC_GLOBAL_REFLECTION_CHECK,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,159,18,91,10
     CONTROL         "Ball Trails/Motion Blur",IDC_GLOBAL_TRAIL_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,159,29,91,10
+    CONTROL         "Overwrite Ball Image",IDC_OVERWRITE_BALL_IMAGE_CHECK,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,159,40,81,10
+    PUSHBUTTON      "...",IDC_BROWSE_BALL_IMAGE,236,60,17,12
+    EDITTEXT        IDC_BALL_IMAGE_EDIT,159,60,75,12,ES_AUTOHSCROLL
+    LTEXT           "Ball Image",IDC_STATIC,159,52,34,8
+    PUSHBUTTON      "...",IDC_BROWSE_BALL_DECAL,236,84,17,12
+    EDITTEXT        IDC_BALL_DECAL_EDIT,159,84,75,12,ES_AUTOHSCROLL
+    LTEXT           "Ball Decal",IDC_STATIC,159,76,33,8
     COMBOBOX        IDC_3D_STEREO,265,18,75,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     CONTROL         "Use Y-Axis (Cab)",IDC_3D_STEREO_Y,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,265,33,80,10
     LTEXT           "Offset",IDC_STATIC,266,47,50,10
@@ -345,7 +356,6 @@ BEGIN
     PUSHBUTTON      "Reset to Defaults",IDC_DEFAULTS,154,340,63,14
     DEFPUSHBUTTON   "OK",IDOK,240,340,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,297,340,50,14
-    LISTBOX         IDC_SIZELIST,14,19,129,156,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     GROUPBOX        "Video Mode",IDC_STATIC,7,7,142,347
     GROUPBOX        "Ball Rendering",IDC_STATIC,154,7,103,92
     GROUPBOX        "3D Stereo Output",IDC_STATIC,262,7,85,80
@@ -353,14 +363,6 @@ BEGIN
     GROUPBOX        "Max Texture Dimension (for low-end gfx boards)",IDC_STATIC,159,270,180,25
     LTEXT           "Elements Detail Level (decrease = performance)",IDC_STATIC,162,299,156,8
     GROUPBOX        "Ball aspect ratio for stretched Tables",IDC_STATIC,12,274,132,75
-    PUSHBUTTON      "...",IDC_BROWSE_BALL_IMAGE,236,60,17,12
-    EDITTEXT        IDC_BALL_IMAGE_EDIT,159,60,75,12,ES_AUTOHSCROLL
-    LTEXT           "Ball Image",IDC_STATIC,159,52,34,8
-    PUSHBUTTON      "...",IDC_BROWSE_BALL_DECAL,236,84,17,12
-    EDITTEXT        IDC_BALL_DECAL_EDIT,159,84,75,12,ES_AUTOHSCROLL
-    LTEXT           "Ball Decal",IDC_STATIC,159,76,33,8
-    CONTROL         "Overwrite Ball Image",IDC_OVERWRITE_BALL_IMAGE_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,159,40,81,10
     GROUPBOX        "Automatic Night->Day cycle",IDC_STATIC,154,145,193,39
     LTEXT           "(Cabinet usage)",IDC_STATIC,24,190,50,8
     LTEXT           "(post-processed Anti-Aliasing)",IDC_STATIC,24,261,101,8
